# crew_ai

./: README.md  improvements_output.md  pyproject.toml  report_output.md
src/marketing_crewai/: crew.py  main.py
src/marketing_crewai/config/: agents.yaml  tasks.yaml
